grpc (1.13.0~pre3-1) UNRELEASED; urgency=medium

  * New major upstream pre-release version.

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Wed, 27 Jun 2018 17:48:53 +0000

grpc (1.13.0~pre2-1) experimental; urgency=medium

  * New major upstream pre-release version.
  * Conflict libgrpc-dev with libgpr1-dev due to library name collision
    (closes: #901218).
  * Add ruby-grpc{,-tools} packages.
  * Add Ruby testing.
  * Enable verbose build.

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Sun, 17 Jun 2018 11:36:43 +0000

grpc (1.12.0-1) experimental; urgency=medium

  * New upstream release.

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Sun, 27 May 2018 14:06:16 +0000

grpc (1.11.0-1) experimental; urgency=medium

  [ Pirate Praveen <praveen@debian.org> ]
  * New upstream release (Closes: #875747)
  * Refresh patches
  * Tighten dependencies
  * Bump standards version to 4.1.4
  * Bump debhelper compat to 11
  * Library transition from libgrpc3 to libgrpc6 .

  [ Laszlo Boszormenyi (GCS) ]
  * Don't specify parallel to debhelper.
  * Install new C++ headers.
  * Install upstream NOTICE.txt to protobuf-compiler-grpc package.
  * Update packaging bits.
  * Add patch for multiarch library installation.
  * Make the package multiarch.
  * Update d/copyright to match source.
  * Be the maintainer, Andrew seems to be MIA.

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Fri, 04 May 2018 17:04:13 +0000

grpc (1.3.2-1) unstable; urgency=medium

  [ Pirate Praveen <praveen@onenetbeyond.org> ]
  * Patch to provide a wrapped memcpy for linking (closes: #867541).

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Mon, 14 Aug 2017 10:44:38 +0000

grpc (1.3.2-0.2) unstable; urgency=medium

  * Non-maintainer upload.
    * fix-libgrpc++-soname.diff: Update to also fix the soname of
      libgrpc++_error_details.so. (Closes: #863717)

 -- Steinar H. Gunderson <sesse@debian.org>  Thu, 01 Jun 2017 18:11:56 +0200

grpc (1.3.2-0.1) unstable; urgency=medium

  * Non-maintainer upload.